# trading-platform

./: .gitignore  BUG.md  CMakeLists.txt  README.md  print_cmake_project_files.sh
education/: CMakeLists.txt  DEVELOPMENT_RULES.md  MICROSERVICES_STRATEGY.md  Makefile  TESTING_GUIDE.md
education/auth-service/: CMakeLists.txt  Dockerfile  README.md  config.json
education/auth-service/include/: AuthApp.hpp
education/auth-service/include/application/: AccountService.hpp  AuthService.hpp
education/auth-service/include/domain/: Account.hpp  Session.hpp  User.hpp
education/auth-service/scripts/: reset-db.sh
education/auth-service/sql/: 01-schema.sql  02-data.sql  03-clean.sql
education/auth-service/src/: AuthApp.cpp  main.cpp
education/auth-service/tests/: AccountServiceTest.cpp  AuthEndpointTest.cpp  AuthServiceTest.cpp  GetAccessTokenHandlerTest.cpp
education/auth-service/tests/mocks/: InMemoryAccountRepository.hpp  InMemorySessionRepository.hpp  InMemoryUserRepository.hpp
education/broker-service/: CMakeLists.txt  Dockerfile  README.md  config.json
education/broker-service/include/: BrokerApp.hpp
education/broker-service/include/application/: MarketDataPublisher.hpp  OrderCommandHandler.hpp  OrderEventHandler.hpp  OrderExecutor.hpp  PriceSimulator.hpp  QuoteService.hpp
education/broker-service/include/domain/: BrokerBalance.hpp  BrokerOrder.hpp  BrokerPosition.hpp  Instrument.hpp  Money.hpp  Order.hpp  OrderRequest.hpp  OrderResult.hpp  Portfolio.hpp  Position.hpp  Quote.hpp  Timestamp.hpp
education/broker-service/include/settings/: BrokerSettings.hpp  DbSettings.hpp  RabbitMQSettings.hpp
education/broker-service/scripts/: reset-db.sh
education/broker-service/sql/: 01-schema.sql  02-data.sql  03-clean.sql  init.sql
education/broker-service/src/: BrokerApp.cpp  main.cpp
education/broker-service/tests/adapters/: BackgroundTickerTest.cpp  EnhancedFakeBrokerTest.cpp  FakeBrokerAdapterTest._cpp  MarketScenarioTest.cpp  OrderProcessorTest.cpp  PriceSimulatorTest.cpp
education/broker-service/tests/endpoints/: GetAllInstrumentsHandlerTest.cpp  GetCashHandlerTest.cpp  GetInstrumentHandlerTest.cpp  GetOrderHandlerTest.cpp  GetOrdersHandlerTest.cpp  GetPortfolioHandlerTest.cpp  GetPositionsHandlerTest.cpp  OrdersHandlerTest.cpp  PortfolioHandlerTest.cpp
education/graphana/: grafana-dashboard.json
education/k8s/: auth-postgres.yaml  auth-service.yaml  broker-postgres.yaml  broker-service.yaml  deploy.sh  grafana-dashboard-configmap.yaml  ingress.yaml  kustomization.yaml  monitoring-ingress.yaml  namespace.yaml  rabbitmq.yaml  secret.yaml  servicemonitor.yaml  trading-postgres.yaml  trading-service.yaml  trading-ui.html  trading-ui.yaml
education/postman/: auth-service.postman_collection.json  broker-service.postman_collection.json  trading-e2e-tests-v2.json  trading-service-e2e.postman_collection.json  trading-service.postman_collection.json
education/scripts/: debug-api.sh  reset-all-dbs.sh
education/trading-service/: CMakeLists.txt  Dockerfile  README.md  config.json
education/trading-service/include/: TradingApp.hpp
education/trading-service/include/application/: MarketService.hpp  MetricsService.hpp  OrderEventHandler.hpp  OrderService.hpp  PortfolioService.hpp  TradingEventHandler.hpp
education/trading-service/include/domain/: IdempotencyRecord.hpp  Instrument.hpp  Money.hpp  Order.hpp  OrderRequest.hpp  OrderResult.hpp  Portfolio.hpp  Position.hpp  Quote.hpp  Timestamp.hpp
education/trading-service/include/settings/: AuthClientSettings.hpp  BrokerClientSettings.hpp  CacheSettings.hpp  DbSettings.hpp  IBrokerClientSettings.hpp  IMetricsSettings.hpp  MetricsSettings.hpp  RabbitMQSettings.hpp  ServerSettings.hpp
education/trading-service/scripts/: reset-db.sh
education/trading-service/sql/: 01-schema.sql  02-data.sql  03-clean.sql
education/trading-service/src/: main.cpp
education/trading-service/tests/adapters/: CachedBrokerGatewayTest.cpp  HttpBrokerGatewayTest.cpp  OrderHandlerTest.cpp
education/trading-service/tests/application/: MarketServiceTest.cpp  OrderServiceTest.cpp  PortfolioServiceTest.cpp
education/trading-service/tests/endpoints/: CancelOrderHandlerTest.cpp  CreateOrderHandlerTest.cpp  GetAllInstrumentsHandlerTest.cpp  GetCashHandlerTest.cpp  GetInstrumentByFigiHandlerTest.cpp  GetOrderHandlerTest.cpp  GetOrdersHandlerTest.cpp  GetPortfolioHandlerTest.cpp  (+4 more)
hello-world/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
hello-world/config/: nginx.conf  prometheus.yml
hello-world/html/: index.html
hello-world/include/: HelloWorldApp.hpp
hello-world/include/handlers/: EchoHandler.hpp  HealthCheckHandler.hpp  MetricsHandler.hpp
hello-world/src/: HelloWorldApp.cpp  main.cpp
hello-world/src/handlers/: EchoHandler.cpp  HealthCheckHandler.cpp  MetricsHandler.cpp
mvp/: CMakeLists.txt  CURL_CHECKLIST.md  Dockerfile  ENDPOINTS.md  FAKE_BROKER_DESIGN.md  FAKE_BROKER_README.md  MANUAL_TESTING_CHECKLIST.md  README.md  README_METRICS.md  config.json  docker-compose.yml  test-trading-flow.sh
mvp/config/: prometheus.yml
mvp/include/: TradingApp.hpp
mvp/include/application/: AccountService.hpp  AuthService.hpp  MarketService.hpp  OrderService.hpp  PortfolioService.hpp  StrategyService.hpp
mvp/include/domain/: AccessTokenClaims.hpp  Account.hpp  AccountRequest.hpp  Instrument.hpp  JwtClaims.hpp  Money.hpp  Order.hpp  OrderRequest.hpp  OrderResult.hpp  Portfolio.hpp  Position.hpp  Quote.hpp  SessionTokenClaims.hpp  Signal.hpp  SmaConfig.hpp  Strategy.hpp  StrategyRequest.hpp  Timestamp.hpp  User.hpp
mvp/include/utils/: UuidGenerator.hpp
mvp/sql/: init.sql
mvp/src/: TradingApp.cpp  main.cpp
mvp/tests/adapters/: BackgroundTickerTest.cpp  EnhancedFakeBrokerTest.cpp  FakeTinkoffAdapterTest.cpp  InMemoryEventBus.cpp  MarketScenarioTest.cpp  OrderProcessorTest.cpp  PriceSimulatorTest.cpp  SimpleBrokerGatewayAdapterTest.cpp
mvp/tests/endpoints/: AccountEndpointTest.cpp  AuthEndpointTest.cpp  MarketHandlerTest.cpp  OrderHandlerTest.cpp  PortfolioHandlerTest.cpp  TradingFlowIntegrationTest.cpp
(+242 files in other folders)
